--- a/.env.local
+++ b/.env.local
@@ -4,5 +4,6 @@ VITE_projectId=indean-valley-resturent
 VITE_storageBucket=indean-valley-resturent.firebasestorage.app
 VITE_messagingSenderId=670913809127
 VITE_appId=1:670913809127:web:fa3e3dd15356bf63a7f042
-VITE_IMGBB_API_KEY=0a6fbb9048a4ce9e95469796bea23ca3
-VITE_API_URL=https://indian-valley-resturand-server.vercel.app
+VITE_IMGBB_API_KEY=c87d48cbdd24285ed678a2942418556d
+VITE_API_URL=https://indian-valley-resturant-server.vercel.app
+# VITE_API_URL=http://localhost:5000
