--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "indean-valley-resturent"
-  }
+    "default": "indian-valley-restaurant-e3809",
+    "indian-valley": "indian-valley-restaurant-e3809"
+  },
+  "targets": {},
+  "etags": {}
 }
